# backend/routes/auction.js
@@ -1,19 +1,28 @@
 const express = require("express")
 const router = express.Router()
-const { 
+const {
   createAuction,
   getAllAuction,
   getUserAuction,
   getAuctionDetails,
   editAuction,
   deleteAuction,
-  closeAuction } = require("../controllers/auctions")
-  
+  closeAuction,
+  uploadImage,
+} = require("../controllers/auctions");
+const upload = require("../middleware/multer");
 
 router.route("/create").post(createAuction)
 router.route("/all").get(getAllAuction)
 router.route("/user/all").get(getUserAuction)
 router.route("/:id").get(getAuctionDetails).patch(editAuction).delete(deleteAuction)
 router.route("/:id/close").post(closeAuction)
+
+router.route("/:id/images").post(upload.single("image"), uploadImage);
+
+//for more than one image
+// router
+//   .route("/:id/images")
+//   .post(upload.array("images", 10), uploadImages); // "images" is the new form-data key
 
 module.exports = router;
